kubernetes/apps/jellyfin/app/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-private
  namespace: jellyfin
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jellyfin.homelab-peej.dev
      secretName: jellyfin-internal-tls-secret
  rules:
    - host: jellyfin.homelab-peej.dev
      http:
        paths:
          - backend:
              service:
                name: jellyfin
                port:
                  number: 8096
            path: /
            pathType: Prefix
